--- a/assets/css/receita/receitas.css
+++ b/assets/css/receita/receitas.css
@@ -2,5 +2,26 @@
   background-color: #e5e5e5;
   display: flex;
   flex-wrap: wrap;
+ 
+}
+
+@media screen and (min-width: 0) { 
+  .receitas{
+    padding: 4rem 0 0 1rem;
+    
+  }
+}
+
+@media screen and (min-width: 768px) { 
+.receitas{
+    padding: 4rem 0 0 2.5rem;
+  }
+}
+
+@media screen and (min-width: 992px) { 
+.receitas{
   padding: 4rem 0 0 4rem;
+  
+    
+}
 }
