--- a/assets/css/banner/banner-titulo.css
+++ b/assets/css/banner/banner-titulo.css
@@ -10,3 +10,17 @@
     transform: translate(-50%, -50%);
     width: 100%;
 }
+
+@media screen and (min-width: 0) { 
+    .banner__titulo{
+        font-size: 2rem;
+
+    }
+}
+
+    @media screen and (min-width: 768px) { 
+        .banner__titulo{
+            font-size: 4.1875rem;
+
+        }
+    }
