--- a/assets/css/cabecalho.css
+++ b/assets/css/cabecalho.css
@@ -6,3 +6,20 @@
     padding-left: 2rem;
     padding-right: 2rem;
 }
+
+@media screen and (min-width: 0) { /*celulares*/
+    .cabecalho{
+        justify-content: center;
+        padding: 0 1rem;
+
+    }
+    
+}
+
+@media screen and (min-width: 768px) { /*celulares*/
+    .cabecalho{
+        justify-content: space-between;
+        padding: 0 5rem;
+
+    }
+}
