--- a/assets/css/pessoas.css
+++ b/assets/css/pessoas.css
@@ -3,3 +3,17 @@
     display: flex;
     justify-content: space-around;
 }
+
+@media screen and (min-width: 0) { 
+    .pessoas{
+        flex-direction: column;
+    }
+  }
+  
+  @media screen and (min-width: 768px) { 
+    .pessoas{
+        flex-direction: row;
+    }
+  }
+  
+ 
