--- a/assets/css/sobre/sobre-descricao.css
+++ b/assets/css/sobre/sobre-descricao.css
@@ -1,5 +1,17 @@
 .sobre__descricao{
     color: #595959;
-    font-size: 1.2rem;
+   
     font-weight: 100;
+}
+
+@media screen and (min-width: 0) { 
+    .sobre__descricao{
+        font-size: 0.90rem;
+    }
+}
+
+@media screen and (min-width: 768px) { 
+    .sobre__descricao{
+        font-size: 1.2rem;
+    }
 }
